# tree-sitter-qsp

./: Cargo.toml  LICENSE  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
